--- a/contact.html
+++ b/contact.html
@@ -44,11 +44,11 @@
             </div>
             <div class="information">
               <img src="mail.jpg" class="icon" alt="" />
-              <p> Email:komal69766@gmail.com</p>
+              <p> Email:komal*****@gmail.com</p>
             </div>
             <div class="information">
               <img src="phone.jpg" class="icon" alt="" />
-              <p> Phone:7065984302</p>
+              <p> Phone:706******2</p>
             </div>
           </div>
 
